# ShadowBook

./: .gitignore  LICENSE  PROJECT.md  README.md
docs/: ARCHITECTURE.md  DEMO.md  PITCH.md  STYLUS.md
frontend/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/shadow-book/: page.tsx
frontend/src/features/shadow-book/: index.ts
frontend/src/features/shadow-book/__tests__/: balance.property.test.ts  demo.property.test.ts  matching.property.test.ts  metrics.property.test.ts  order.property.test.ts  orderbook.property.test.ts  routing.property.test.ts
frontend/src/features/shadow-book/components/: mempool-visualizer.tsx  shadow-book-terminal.tsx  trade-interface.tsx
frontend/src/features/shadow-book/hooks/: use-shadow-book.ts
frontend/src/features/shadow-book/lib/: market-maker.ts  wagmi-config.ts
frontend/src/features/shadow-book/providers/: web3-provider.tsx
frontend/src/features/shadow-book/types/: index.ts
stylus_contract/: Cargo.toml
stylus_contract/src/: lib.rs
