[package]
name = "shadow-book"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shadow-Book: Dark Pool Limit Order Book on Arbitrum Stylus"

[dependencies]
stylus-sdk = "0.5.0"
alloy-primitives = "0.6"
alloy-sol-types = "0.6"
mini-alloc = "0.4"

[features]
default = ["export-abi"]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
